// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages.js should have messages--error class on error prop and match snapshot 1`] = `
<div class="messages messages--error">
  <transition-group-stub></transition-group-stub>
</div>
`;

exports[`Messages.js should render component and match snapshot 1`] = `
<div class="messages">
  <transition-group-stub>
    <div class="messages__message">foo</div>
    <div class="messages__message">bar</div>
  </transition-group-stub>
</div>
`;

exports[`Messages.js should render component and match snapshot 2`] = `
<div class="messages">
  <transition-group-stub></transition-group-stub>
</div>
`;

exports[`Messages.js should render component with default slot and match snapshot 1`] = `
<div class="messages">
  <transition-group-stub>
    <div class="messages__message"><span class="custom-class">0 - foo</span></div>
    <div class="messages__message"><span class="custom-class">1 - bar</span></div>
  </transition-group-stub>
</div>
`;
